--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>org.academiadecodigo.bootcamp</groupId>
             <artifactId>prompt-view</artifactId>
@@ -34,6 +35,25 @@
             <version>3.4.0</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.3.6.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <version>1.0.0.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
