--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,12 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.2.2</version>
+            </plugin>
+
         </plugins>
     </build>
 </project>
