--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,11 @@
             <version>2.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.0</version>
+        </dependency>
 
     </dependencies>
 
